--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,6 +1,7 @@
 $accent: #FF5C63
-$txt_white:#ffff
-$txt_dark:#3333
+$clr_white:#ffff
+$clr_dark:#333333
 $bg_red:#FF1E1E
+$clr_shadow:#1D5C99
 
 $gutter:30px
